liu_workspace_9/.metadata/.plugins/org.eclipse.cdt.ui/SF2_interrupt_tx.build.log
15:56:49 **** Build of configuration Debug for project SF2_interrupt_tx ****
make all 
Building file: ../hal/CortexM3/GNU/hal.S
Invoking: Cross ARM GNU Assembler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -x assembler-with-cpp -MMD -MP -MF"hal/CortexM3/GNU/hal.d" -MT"hal/CortexM3/GNU/hal.o" -c -o "hal/CortexM3/GNU/hal.o" "../hal/CortexM3/GNU/hal.S"
Finished building: ../hal/CortexM3/GNU/hal.S
 
Building file: ../hal/CortexM3/GNU/hw_reg_access.S
Invoking: Cross ARM GNU Assembler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -x assembler-with-cpp -MMD -MP -MF"hal/CortexM3/GNU/hw_reg_access.d" -MT"hal/CortexM3/GNU/hw_reg_access.o" -c -o "hal/CortexM3/GNU/hw_reg_access.o" "../hal/CortexM3/GNU/hw_reg_access.S"
Finished building: ../hal/CortexM3/GNU/hw_reg_access.S
 
Building file: ../hal/CortexM3/cortex_nvic.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I../CMSIS -I../hal -I../hal/CortexM3 -I../hal/CortexM3/GNU -I../drivers/CoreUARTapb -I../drivers_config/sys_config -std=gnu11 --specs=cmsis.specs -MMD -MP -MF"hal/CortexM3/cortex_nvic.d" -MT"hal/CortexM3/cortex_nvic.o" -c -o "hal/CortexM3/cortex_nvic.o" "../hal/CortexM3/cortex_nvic.c"
Finished building: ../hal/CortexM3/cortex_nvic.c
 
Building file: ../drivers_config/sys_config/sys_config.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I../CMSIS -I../hal -I../hal/CortexM3 -I../hal/CortexM3/GNU -I../drivers/CoreUARTapb -I../drivers_config/sys_config -std=gnu11 --specs=cmsis.specs -MMD -MP -MF"drivers_config/sys_config/sys_config.d" -MT"drivers_config/sys_config/sys_config.o" -c -o "drivers_config/sys_config/sys_config.o" "../drivers_config/sys_config/sys_config.c"
Finished building: ../drivers_config/sys_config/sys_config.c
 
Building file: ../drivers/CoreUARTapb/core_uart_apb.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I../CMSIS -I../hal -I../hal/CortexM3 -I../hal/CortexM3/GNU -I../drivers/CoreUARTapb -I../drivers_config/sys_config -std=gnu11 --specs=cmsis.specs -MMD -MP -MF"drivers/CoreUARTapb/core_uart_apb.d" -MT"drivers/CoreUARTapb/core_uart_apb.o" -c -o "drivers/CoreUARTapb/core_uart_apb.o" "../drivers/CoreUARTapb/core_uart_apb.c"
Finished building: ../drivers/CoreUARTapb/core_uart_apb.c
 
Building file: ../CMSIS/startup_gcc/newlib_stubs.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I../CMSIS -I../hal -I../hal/CortexM3 -I../hal/CortexM3/GNU -I../drivers/CoreUARTapb -I../drivers_config/sys_config -std=gnu11 --specs=cmsis.specs -MMD -MP -MF"CMSIS/startup_gcc/newlib_stubs.d" -MT"CMSIS/startup_gcc/newlib_stubs.o" -c -o "CMSIS/startup_gcc/newlib_stubs.o" "../CMSIS/startup_gcc/newlib_stubs.c"
Finished building: ../CMSIS/startup_gcc/newlib_stubs.c
 
Building file: ../CMSIS/startup_gcc/startup_m2sxxx.S
Invoking: Cross ARM GNU Assembler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -x assembler-with-cpp -MMD -MP -MF"CMSIS/startup_gcc/startup_m2sxxx.d" -MT"CMSIS/startup_gcc/startup_m2sxxx.o" -c -o "CMSIS/startup_gcc/startup_m2sxxx.o" "../CMSIS/startup_gcc/startup_m2sxxx.S"
Finished building: ../CMSIS/startup_gcc/startup_m2sxxx.S
 
Building file: ../CMSIS/system_m2sxxx.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I../CMSIS -I../hal -I../hal/CortexM3 -I../hal/CortexM3/GNU -I../drivers/CoreUARTapb -I../drivers_config/sys_config -std=gnu11 --specs=cmsis.specs -MMD -MP -MF"CMSIS/system_m2sxxx.d" -MT"CMSIS/system_m2sxxx.o" -c -o "CMSIS/system_m2sxxx.o" "../CMSIS/system_m2sxxx.c"
Finished building: ../CMSIS/system_m2sxxx.c
 
Building file: ../Copy of main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I../CMSIS -I../hal -I../hal/CortexM3 -I../hal/CortexM3/GNU -I../drivers/CoreUARTapb -I../drivers_config/sys_config -std=gnu11 --specs=cmsis.specs -MMD -MP -MF"Copy of main.d" -MT"Copy\ of\ main.d" -c -o "Copy of main.o" "../Copy of main.c"
../Copy of main.c: In function 'uart_tx_isr':
../Copy of main.c:73:52: warning: passing argument 2 of 'UART_fill_tx_fifo' discards 'volatile' qualifier from pointer target type
         size_in_fifo = UART_fill_tx_fifo( &g_uart, g_tx_buffer, g_tx_size );
                                                    ^
In file included from ../Copy of main.c:13:0:
../drivers/CoreUARTapb/core_uart_apb.h:257:1: note: expected 'const uint8_t *' but argument is of type 'volatile uint8_t *'
 UART_fill_tx_fifo
 ^
Finished building: ../Copy of main.c
 
Building file: ../core_gpio.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I../CMSIS -I../hal -I../hal/CortexM3 -I../hal/CortexM3/GNU -I../drivers/CoreUARTapb -I../drivers_config/sys_config -std=gnu11 --specs=cmsis.specs -MMD -MP -MF"core_gpio.d" -MT"core_gpio.o" -c -o "core_gpio.o" "../core_gpio.c"
Finished building: ../core_gpio.c
 
Building file: ../main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I../CMSIS -I../hal -I../hal/CortexM3 -I../hal/CortexM3/GNU -I../drivers/CoreUARTapb -I../drivers_config/sys_config -std=gnu11 --specs=cmsis.specs -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
../main.c: In function 'uart_tx_isr':
../main.c:65:10: error: 'g_tx_size' undeclared (first use in this function)
     if ( g_tx_size > 0 )
          ^
../main.c:65:10: note: each undeclared identifier is reported only once for each function it appears in
../main.c:67:52: error: 'g_tx_buffer' undeclared (first use in this function)
         size_in_fifo = UART_fill_tx_fifo( &g_uart, g_tx_buffer, g_tx_size );
                                                    ^
../main.c: In function 'is_tx_complete':
../main.c:92:20: error: 'TX_COMPLETE' undeclared (first use in this function)
     int complete = TX_COMPLETE;
                    ^
../main.c:94:10: error: 'g_tx_size' undeclared (first use in this function)
     if ( g_tx_size > 0 )
          ^
../main.c:96:20: error: 'TX_IN_PROGRESS' undeclared (first use in this function)
         complete = TX_IN_PROGRESS;
                    ^
../main.c: In function 'send_using_interrupt':
../main.c:118:9: error: 'g_tx_buffer' undeclared (first use in this function)
         g_tx_buffer = &pbuff[size_in_fifo];
         ^
../main.c:119:9: error: 'g_tx_size' undeclared (first use in this function)
         g_tx_size = tx_size - size_in_fifo;
         ^
../main.c: In function 'main':
../main.c:140:49: error: 'BAUD_VALUE_57600' undeclared (first use in this function)
     UART_init( &g_uart, COREUARTAPB0_BASE_ADDR, BAUD_VALUE_57600, (DATA_8_BITS | NO_PARITY) );
                                                 ^
../main.c:154:31: error: 'g_message' undeclared (first use in this function)
         send_using_interrupt( g_message, sizeof(g_message) );
                               ^
../main.c:159:36: error: 'TX_IN_PROGRESS' undeclared (first use in this function)
         while( is_tx_complete() == TX_IN_PROGRESS )
                                    ^
subdir.mk:31: recipe for target 'main.o' failed
make: *** [main.o] Error 1

15:56:50 Build Finished (took 1s.250ms)

